# chemunited-core

./: .gitignore  .pre-commit-config.yaml  Instruction.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml  security.yml
docs/: chemunited-core-architecture.drawio
examples/: README.md  build_valve_graph.py
src/chemunited_core/: py.typed
src/chemunited_core/common/: constant.py  enums.py  metadata.py
src/chemunited_core/components/: __init__.py  command.py  component.py  enums.py  flow_control.py  flow_source.py  internals.py  junction.py  plugflow.py  pressure_control.py  pressure_regulator.py  valve.py  vessel.py
src/chemunited_core/compounds/: __init__.py  entity.py  pockets.py  registry.py
src/chemunited_core/connections/: edge.py  mdata_connection.py
src/chemunited_core/figure_registry/: __init__.py  assemble.py  controllers.py  pipes.py  pumps.py  rotary_valve.py  solenoid_valve.py  technical.py  thermal.py  vessels.py
src/chemunited_core/protocols/: __init__.py  models.py  pumps.py  sensors.py  technical.py  valves.py
src/chemunited_core/utils/: __init__.py  file_loading.py  internal_quantity.py  internal_qunatity.py  quantity.py
tests/: test_compounds.py  test_figure_registry_graph.py  test_from_mode.py  test_imports.py  test_protocols.py  test_quantities.py
