[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemunited-core"
version = "0.1.0"
description = "Core data models for orchestration, execution, and simulation of protocols in automated chemistry laboratory platforms."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Samuel Vitor Saraiva" },
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-pint>=0.3",
    "pint>=0.23",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chemunited_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/chemunited_core"]
