[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemunited-core"
version = "0.0.3"
description = "Core data models for orchestration, execution, and simulation of protocols in automated chemistry laboratory platforms."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Samuel Vitor Saraiva" },
]
requires-python = ">=3.11"
dependencies = [
    "chemunited-quantities>=0.0.2",
    "pydantic>=2.0",
    "pint>=0.23",
    "numpy>=1.26",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chemunited_core"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["I"]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["chemunited_core"]

[tool.mypy]
explicit_package_bases = true
files = ["src/chemunited_core"]
ignore_missing_imports = true
mypy_path = "src"
no_implicit_reexport = true
pretty = true
python_version = "3.12"
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/chemunited_core"]
